# trabalhoED2Parte2

./: .gitignore  CMakeLists.txt  HashTable.cpp  HashTable.h  Interface.cpp  Interface.h  README.md  Registro.cpp  Registro.h  main.cpp
ArvoresBalanceadas/: ArvoreAVL.cpp  ArvoreAVL.h  ArvoreB.cpp  ArvoreB.h  CMakeLists.txt  NoAVL.cpp  NoB.cpp  NoB.h  auxiliar.cpp  auxiliar.h
HashTable/: CMakeLists.txt  HashTable.cpp  HashTable.h
LeituraArvoreQuad/: CMakeLists.txt  folhaQuadTree.cpp  folhaQuadTree.h  quadTree.cpp  quadTree.h
TADs/: ArvoreAVL.cpp  ArvoreAVL.h  ArvoreB.cpp  ArvoreB.h  Interface.cpp  Interface.h  NoAVL.h  NoB.cpp  NoB.h
